--- a/Declaration/index.html
+++ b/Declaration/index.html
@@ -4,94 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="/ico/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="/ico/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="/ico/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/ico/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="/ico/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="/ico/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="/ico/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="/ico/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/ico/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/ico/android-icon-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/ico/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/ico/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/ico/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/ico/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-    <title>Thuộc tính của CSS</title>
+    <title>Tôi học CSS</title>
   </head>
   <body>
-    <h1>Những thuộc tính cơ bản của CSS</h1>
-    <p id="text">Thuộc tính cho văn bản</p>
-    <p id="opacity">Thuộc tính Opacity-Display-Visibility</p>
-    <img src="/img/Thuộctinhopacitydisplayvisibility.jpeg" width="50%" />
-    <h3>Cách sử dụng</h3>
-    <input type="checkbox" /> Ẩn danh sách
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
-    <p style="background-color: cornflowerblue">Background color</p>
+    <div>
+      <h1>Anh ấy hai mươi gì đấy</h1>
+      <h1 id="demo1">Mạnh mẽ đôi bàn tay</h1>
+      <h1 class="demo1">Đôi mắt luôn hy vọng, khát khao mơ mộng</h1>
+      <h2 class="demo1">Hoài bão dâng trong lòng</h2>
+    </div>
+    <div>
+      <h2 class="demo2 hehe">Dù nhiều gian nan vẫn thấy anh cười</h2>
+      <h4>Ѕức mạnh cho bao người</h4>
+      <h5>Cùng anh em sát cánh không rời</h5>
+      <h6>Đi tự do muôn nơi</h6>
+    </div>
+    <div class="descendant">
+      <p>
+        Tôi thấy như đang bừng sáng triệu trái tim Việt Nam
+        <section>
+          <p>đây là thẻ con của block</p>
+          <p>đây là thẻ con thứ 2</p>
+        </section>
+      </p>
+      <p>Cần lắm những con người giúp nhau xây đời</p>
+      <p>Nâng đỡ nhau không rời</p>
+    </div>
+    <div class="child">
+      <p>Biển trời bao la bát ngát đây mà</p>
+      <p>
+        Chúng ta vẫn một nhà
+        <section>
+          <p>đây là thẻ con của block, cháu của div</p>
+        </section>
+      </p>
+      <p>
+        Kề vai nhau dẫu có xa lạ
+        <section>
+          <p>đây là thẻ con</p>
+        </section>
+      </p>
+      <p>Ta cùng nhau vươn xa</p>
+    </div>
+    <!-- Thẻ p ngoài div sẽ không bị ảnh hưởng -->
+      <p>Việt Nam ta hướng về khát vọng chiến thắng</p>
+      <p>Ước mơ giữ trong ánh mắt</p>
+    <!-- Thẻ p đứng sau h3 sẽ bị tác động -->
+      <h3>Dâng đầy tình yêu mãi trong tim này</h3>
+      <p>Việt Nam ta hướng về khát vọng chiến thắng</p>
+    <!--  -->
+      <div class="subsequent">Tiến lên dẫu mưa, dẫu nắng</div>
+      <p>Đi về cùng nhau nắm tay vai kề</p>
+      <p>Tôi yêu Việt Nam&lt;3 </p>
+      </div>
   </body>
 </html>
