--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double+Ink:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <style>
       h2{
@@ -402,6 +406,52 @@
             <p class="p6">Cerise</p>
           </div>
         </section>
+      </section>
+    </div>
+
+    <!-----------------CSS TYPOGRAPHY----------------->
+
+    <div>
+      <h1>CSS TYPOGRAPHY</h1>
+      <section>
+        <h2>Font Name & Font Family & GG Font</h2>
+        <p>Font Name là tên của nhóm họ font. Truy cập Website <a href="https://fonts.google.com/">Google Font</a> để lựa chọn Font yêu thích. Làm theo hướng dẫn để thêm Font vào file.</p>
+        <p>Khi khai báo font family, mỗi font sẽ được ngăn cách nhau bởi dấu phẩy. Hệ thống sẽ tìm theo thứ tự <strong>từ trái qua phải</strong>. Những font nào viết liền thì không cần viết trong dấu nháy kép "" hoặc nháy đơn'' (vd: Arial, roboto); font nào có dấu cách ở giữa thì phải viết trong dấu nháy kép hoặc nháy đơn (vd: "SUSE mono",...)</p>
+        <div class="example-font">
+          <p class="suse-font">Đây là font SUSE Mono</p>
+          <p class="suse-font2">Cũng là Suse font nhưng điều chỉnh khác</p>
+          <p class="ink-font">TRY YOUR BEST! YOUR DREAM VERY GREAT!!</p>
+        </div>
+        <p>Ngoài ra bạn có thể thêm các font yêu thích, tùy chỉnh theo ý của bạn. <Strong>Lưu ý:</Strong> Luôn luôn có font hệ thống đứng sau các font mình đang sử dụng, vì trình duyệt máy khách của thể không tải font đó, font đứng sau sẽ thay thế. </p>
+        <h3>Property	Description</h3>
+        <Table class="property-font">
+          <tbody>
+            <tr>
+              <th>font</th>	        
+              <td>Sets all the font properties in one declaration</td> 
+            </tr>
+            <tr>
+              <th>font-family</th>	        
+              <td>Specifies the font family for text</td> 
+            </tr>
+            <tr>
+              <th>font-size</th>	        
+              <td>Specifies the font size of text</td> 
+            </tr>
+            <tr>
+              <th>font-style</th>	        
+              <td>Specifies the font style for text </td> 
+            </tr>
+            <tr>
+              <th>font-variant</th>	        
+              <td>Specifies whether or not a text should be displayed in a small-caps font </td> 
+            </tr>
+            <tr>
+              <th>font-weight</th>	        
+              <td>Specifies the weight of a font </td> 
+            </tr>
+          </tbody>
+        </Table>
       </section>
     </div>
 
